--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 	<title>hahaha</title>
 </head>
 <body>
-	dancing like tht
+	<h1><font color="Aqua">
+		<table border="2" bgcolor="black">
+			<tr align="center" valign="middle">
+				<tt>
+					Welcome
+				</tt>
+			</tr>
+		</table>
+	</font></h1>
 
 </body>
 </html>
