--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<h1><font color="Aqua">
 		<table border="2" bgcolor="black">
 			<tr align="center" valign="middle">
+				<td>
 				<tt>
 					Welcome
-				</tt>
-			</tr>
-		</table>
+				</tt></td>
+			</tr></table>
 	</font></h1>
 
 </body>
